# dotbim_rust

./: Cargo.toml  README.md
src/: color.rs  element.rs  file.rs  lib.rs  mesh.rs  rotation.rs  vector.rs
