[package]
name = "dotbim_rust"
version = "0.1.0"
edition = "2021"
authors = ["Wojciech Radaczyński"]
description = "Open-source Rust library for dotbim file format."
homepage = "https://dotbim.net/"
repository = "https://github.com/paireks/dotbim_rust"
license = "MIT"
readme = "README.md"
categories = ["rendering::data-formats", "parser-implementations"]
keywords = ["dotbim", "AEC", "BIM"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies]
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0"
